--- a/_posts/2023-09-04-blog.md
+++ b/_posts/2023-09-04-blog.md
@@ -7,4 +7,8 @@ date: 2023-09-04
 2. 在settings中enable Pages模块。在build and deployment中选择deploy from a branch，保存选中的branch
 3. 在main branch中安装一个_config.yml文件配置jekyll参数。jekyll是一个简单的静态博客网站生成器 https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/about-github-pages-and-jekyll
 4. 生成一个index.md文件描述网站的标题的介绍
-5. 创建_posts/ 文件夹。在文件夹中发表第一个博客。描述博客标题和日期后生成博客内容
+5. 创建blog文件。文件必须以_posts/YYYY-MM-DD-title.md命名，而且必须以下面的形式添加博客标题和日期
+---
+title: "Welcome to my blog"
+date: 2019-01-20
+---
